fix readingbar z-index

--- a/css/style.css
+++ b/css/style.css
@@ -436,7 +436,6 @@ a.ripplelink {
 	height: 3px;
 	top: 55px;
 	width: 100%;
-	z-index: 1;
 }
 
 #readingbar-progress {
